<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_spawn_objects</name>
  <version>0.0.0</version>
  <description>The carla_spawn_objects package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>ros_compatibility</exec_depend>

  <!-- ROS 2 DEPENDENCIES-->
  <depend condition="$ROS_VERSION == 2">rclpy</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
